editor: fix heading collapse on mobile Signed-off-by: 01zulfi <85733202+01zulfi@users.noreply.github.com>

--- a/packages/editor/styles/styles.css
+++ b/packages/editor/styles/styles.css
@@ -870,18 +870,24 @@ del.diffdel {
   text-decoration: none;
 }
 
+.ProseMirror h1 ,
+.ProseMirror h2 ,
+.ProseMirror h3 ,
+.ProseMirror h4 ,
+.ProseMirror h5 ,
+.ProseMirror h6 {
+  display: flex;
+  align-items: center;
+}
+
 .ProseMirror h1 .heading-collapse-icon,
 .ProseMirror h2 .heading-collapse-icon,
 .ProseMirror h3 .heading-collapse-icon,
 .ProseMirror h4 .heading-collapse-icon,
 .ProseMirror h5 .heading-collapse-icon,
 .ProseMirror h6 .heading-collapse-icon {
-  display: inline-block;
-  vertical-align: middle;
   cursor: pointer;
   background-size: 18px;
-  width: 18px;
-  height: 18px;
   margin-inline-start: 8px;
 
   background-color: var(--icon);
@@ -896,31 +902,37 @@ del.diffdel {
 }
 
 .ProseMirror h1 .heading-collapse-icon {
+  margin-top: 3.5px;
   width: 18px;
   height: 18px;
 }
 
 .ProseMirror h2 .heading-collapse-icon {
+  margin-top: 3px;
   width: 16px;
   height: 16px;
 }
 
 .ProseMirror h3 .heading-collapse-icon {
+  margin-top: 2.3px;
   width: 15px;
   height: 15px;
 }
 
 .ProseMirror h4 .heading-collapse-icon {
+  margin-top: 1.8px;
   width: 14px;
   height: 14px;
 }
 
 .ProseMirror h5 .heading-collapse-icon {
+  margin-top: 1.3px;
   width: 13px;
   height: 13px;
 }
 
 .ProseMirror h6 .heading-collapse-icon {
+  margin-top: 0.3px;
   width: 12px;
   height: 12px;
 }
@@ -965,13 +977,24 @@ del.diffdel {
 }
 
 /* hide collapse icon when heading is empty (only contains trailing break) */
-.ProseMirror h1:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h2:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h3:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h4:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h5:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
-.ProseMirror h6:has(> span > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon {
+.ProseMirror h1:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
+.ProseMirror h2:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
+.ProseMirror h3:has(> div  > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
+.ProseMirror h4:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
+.ProseMirror h5:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon,
+.ProseMirror h6:has(> div > br.ProseMirror-trailingBreak:only-child) .heading-collapse-icon {
   display: none !important;
+}
+
+@media screen and (max-width: 768px) {
+  .ProseMirror h1 .heading-collapse-icon,
+  .ProseMirror h2 .heading-collapse-icon,
+  .ProseMirror h3 .heading-collapse-icon,
+  .ProseMirror h4 .heading-collapse-icon,
+  .ProseMirror h5 .heading-collapse-icon,
+  .ProseMirror h6 .heading-collapse-icon {
+    opacity: 1 !important;
+  }
 }
 
 [data-hidden="true"] {
@@ -992,3 +1015,4 @@ del.diffdel {
 pre[class*="language-"] {
   overflow: initial !important;
 }
+
